# ZinfoursAdventure

./: Cargo.toml  README.md  clippy.toml
assets/: script.js  styles.css
src/: app_error.rs  main.rs
