[package]
name = "zinfours-adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
bincode = "1.3"
encoding_rs = "0.8.35"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
maud = { version = "0.27", features = ["axum"]}
parking_lot = "0.12"
rand = "0.9"
redb = { version = "2.4", features = ["cache_metrics"]}
serde = { version = "1.0", features = ["derive"]}
serde-inline-default = "0.2.3"
serde_json = "1.0.140"
short-uuid = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower_governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.13", features = ["serde", "v4"]}
