[package]
name = "zinfours-adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
bincode = "1.3"
encoding_rs = "0.8"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
maud = { version = "0.27", features = ["axum"]}
parking_lot = "0.12"
rand = { version = "0.9", features = ["nightly"]}
redb = { version = "2.4", features = ["cache_metrics"]}
serde = { version = "1.0", features = ["derive"]}
serde-inline-default = "0.2"
serde_json = "1.0"
short-uuid = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["fs", "trace", "normalize-path"] }
tower_governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.13", features = ["serde", "v4"]}
tower = "0.5"
itertools = "0.14"
axum-login = "0.17"
tower-sessions = "0.14"
aws-lc-rs = "1.13"
async-trait = "0.1"
